

v0.16 (β) - 2016-xx-xx
======================
- Redesign trends page (#97).
- 


v0.15 (β) - 2016-03-24
======================
- Django 1.8.11 released (#82).
- Prevent tests from failing due to moment of execution (#88).
- Statistics page meter positions are broken (#93).
- Archive only shows graph untill 23:00 (11 pm) (#77).
- Trends page crashes due to nullable fields average (#100).
- Trends: Plot peak and off-peak relative to each other (#99).
- Monitor requirements with requires.io (#101).
- Terminology (#41).
- Obsolete signals in dsmr_consumption (#63).
- Individual app testing coverage (#64).
- Support for extra devices on other M-bus (0-n:24.1) (#92).
- Separate post-deployment commands (#102).


v0.14 (β) - 2016-03-13
======================
- Show exceptions in production (webinterface) (#87).
- Keep Supervisor processes running (#79).
- Hourly stats of 22:00:00+00 every day lack gas (#78).
- Test Travis-CI with MySQL + MariaDB + PostgreSQL (#54).
- PostgreSQL tests + nosetests + coverage failure: unrecognized configuration parameter "foreign_key_checks" (#62).
- Performance check (#83).
- Allow month & year archive (#66).
- Graphs keep increasing height on tablet (#89).


v0.13 (β) - 2016-03-06
======================
- Delete StatsSettings(.track) settings model (#71).
- Drop deprecated commands (#22).
- Datalogger doesn't work properly with DSMR 4.2 (KAIFA-METER) (#73).
- Dashboard month statistics costs does not add up (#75).
- Log unhandled exceptions and errors (#65).
- Datalogger crashes with IntegrityError because 'timestamp' is null (#74).
- Trends are always shown in UTC (#76).
- Squash migrations (#31).
- Display 'electricity returned' graph in dashboard (#81).
- Optional gas (and electricity returned) capabilities tracking (#70).
- Add 'electricity returned' to trends page (#84).


v0.12 (β) - 2016-03-01
======================
- Archive: View past days details (#61).
- Dashboard: Consumption total for current month (#60).