@@ -3,6 +3,7 @@
 v0.16 (β) - 2016-xx-xx
 ======================
 - Redesign trends page (#97).
+- Support for summer time (#105).
 - 
 
 
